# WebBar

./: COPYING  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  messages.rs  tray.rs  util.rs
